OZ-68: Fixed test framework to male setting up of source DB optional and fixed PatientJobTest to pass